2005-12-21  Adam Fedor  <fedor@gnu.org>

	* Version 1.11.2

2005-12-20  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for objc-gnu in the GNUstep libraries dir.
	* Instance/bundle.make: Always link againt all libs on darwin.

2005-12-20  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Don't strip -g from CFLAGS. Someone might want it
	without using debug=yes.

2005-12-06  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: On mingw32, if we don't get the config file location
	from an earlier installatioin or a command line option, use
	/c/GNUstep/GNUstep.conf-dev ... assuming a development version
	rather than a version for distribution.
	* target.m: add -SystemStubs to bundle libraries on MacOS-X tiger ...
	as linking of stdio functions seems to fail otherwise.

2005-12-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/filesystem.texi: Initial attempt at adding
	documentation on how the filesystem layout is controlled by
	the GNUstep config file.

2005-12-05  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Display a message with the GNUSTEP_MAKEFILES that
	is used.  In psychological preparation for when it will actually
	be configurable. ;-)
	* configure: Regenerated.

2005-12-05  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/library.make (internal-library-uninstall_): Fixed
	uninstallation of dll on windows.  (Suggested by Frode
	<frode@bredband.net>).

2005-12-02  Richard Frith-Macdonald <rfm@gnu.org>

	* opentool.in:
	* openapp.in:
	* config.make.in:
	Honor the GNUSTEP_CONFIG_FILE environment variable.

2005-11-28  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUstep.conf.in: Use new variables for handling backslashes in
	paths.
	* GNUstep.csh.in: ditto
	* GNUstep.sh.in: ditto
	* GNUmakefile.in: Quote paths when we use them .. to avoid backslashes
	being removed when they should be present in the path.
	* configure.ac: Always make GNUSTEP_MAKEFILES the Library/Makefiles
	subdirectory of the system root.  Create new variables containing