@@ -89,6 +89,8 @@ case "$app" in
   *)         app_list="$app.app:$app.debug:$app.profile"; appname="$app";
 esac
 
+old_IFS="$IFS"
+IFS=:
 case "$app" in
   /*) # An absolute path.
       for appdir in $app_list; do
@@ -107,7 +109,7 @@ case "$app" in
 	 fi
       done;;
     *)  # A path that should be searched into the GNUstep paths
-      for dir in "$GNUSTEP_USER_ROOT" "$GNUSTEP_LOCAL_ROOT" "$GNUSTEP_NETWORK_ROOT" "$GNUSTEP_SYSTEM_ROOT"; do
+      for dir in "." "$GNUSTEP_USER_ROOT" "$GNUSTEP_LOCAL_ROOT" "$GNUSTEP_NETWORK_ROOT" "$GNUSTEP_SYSTEM_ROOT"; do
         for appdir in $app_list; do
           # First, search in $dir/Applications/any_path_here/$appdir
           #echo "$dir/Applications/"'*'"/$appdir"
@@ -137,6 +139,7 @@ case "$app" in
 	done
       done;;
 esac
+IFS="$old_IFS"
 unset app_list
 unset appdir
 
